Fixed problem in which instagram link was not clickable on ios.

--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body {
     user-select: none;
 }
 
-img {
+img:not(.insta-josue) {
     pointer-events: none;
     user-select: none;
 }
